// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      69,
      71,
      76,
    ],
    "chordName": "Asus2",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 0,
  },
  Object {
    "chord": Array [
      69,
      71,
      76,
    ],
    "chordName": "Asus2",
    "dur": 480,
    "isRest": false,
    "next": 960,
    "time": 480,
  },
  Object {
    "chord": Array [
      69,
      71,
      76,
    ],
    "chordName": "Asus2",
    "dur": 480,
    "isRest": false,
    "next": 1440,
    "time": 960,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 960,
    "isRest": false,
    "next": 2400,
    "time": 1440,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2400,
  },
  Object {
    "chord": Array [
      61,
      63,
      68,
    ],
    "chordName": "Absus4",
    "dur": 640,
    "isRest": false,
    "next": 3520,
    "time": 2880,
  },
  Object {
    "chord": Array [
      61,
      63,
      68,
    ],
    "chordName": "Absus4",
    "dur": 320,
    "isRest": false,
    "next": 3840,
    "time": 3520,
  },
  Object {
    "chord": Array [
      63,
      70,
      66,
      71,
    ],
    "chordName": "Ebm6m",
    "dur": 960,
    "isRest": false,
    "next": 4800,
    "time": 3840,
  },
  Object {
    "chord": Array [
      63,
      70,
      66,
      71,
    ],
    "chordName": "Ebm6m",
    "dur": 480,
    "isRest": false,
    "next": 5280,
    "time": 4800,
  },
  Object {
    "chord": Array [
      61,
      66,
      68,
    ],
    "chordName": "Dbsus4",
    "dur": 480,
    "isRest": false,
    "next": 5760,
    "time": 5280,
  },
  Object {
    "chord": Array [
      61,
      66,
      68,
    ],
    "chordName": "Dbsus4",
    "dur": 960,
    "isRest": false,
    "next": 6720,
    "time": 5760,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
    ],
    "chordName": "Dbm",
    "dur": 960,
    "isRest": false,
    "next": 7680,
    "time": 6720,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      69,
      71,
      76,
    ],
    "chordName": "Asus2",
    "dur": 240,
    "isRest": false,
    "next": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      69,
      71,
      76,
    ],
    "chordName": "Asus2",
    "dur": 240,
    "isRest": false,
    "next": 480,
    "time": 240,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 960,
    "time": 480,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 1440,
    "time": 960,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 160,
    "isRest": false,
    "next": 1600,
    "time": 1440,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 80,
    "isRest": false,
    "next": 1680,
    "time": 1600,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 80,
    "isRest": false,
    "next": 1760,
    "time": 1680,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      69,
    ],
    "chordName": "C#m6m",
    "dur": 1120,
    "isRest": false,
    "next": 2880,
    "time": 1760,
  },
  Object {
    "chord": Array [
      59,
      61,
      63,
      66,
      68,
      69,
    ],
    "chordName": "Abm7add11",
    "dur": 160,
    "isRest": false,
    "next": 3040,
    "time": 2880,
  },
  Object {
    "chord": Array [
      59,
      61,
      63,
      66,
      68,
      69,
    ],
    "chordName": "Abm7add11",
    "dur": 80,
    "isRest": false,
    "next": 3120,
    "time": 3040,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 720,
    "isRest": true,
    "next": 3840,
    "time": 3120,
  },
  Object {
    "chord": Array [
      63,
      66,
      71,
      70,
    ],
    "chordName": "Ebm6m",
    "dur": 240,
    "isRest": false,
    "next": 4080,
    "time": 3840,
  },
  Object {
    "chord": Array [
      63,
      66,
      71,
      70,
    ],
    "chordName": "Ebm6m",
    "dur": 240,
    "isRest": false,
    "next": 4320,
    "time": 4080,
  },
  Object {
    "chord": Array [
      63,
      66,
      71,
      70,
    ],
    "chordName": "Ebm6m",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4320,
  },
  Object {
    "chord": Array [
      63,
      66,
      71,
      70,
    ],
    "chordName": "Ebm6m",
    "dur": 480,
    "isRest": false,
    "next": 5280,
    "time": 4800,
  },
  Object {
    "chord": Array [
      61,
      63,
      64,
      66,
      68,
      71,
    ],
    "chordName": "Dbm11",
    "dur": 160,
    "isRest": false,
    "next": 5440,
    "time": 5280,
  },
  Object {
    "chord": Array [
      61,
      63,
      64,
      66,
      68,
      71,
    ],
    "chordName": "Dbm11",
    "dur": 80,
    "isRest": false,
    "next": 5520,
    "time": 5440,
  },
  Object {
    "chord": Array [
      61,
      63,
      64,
      66,
      68,
      71,
    ],
    "chordName": "Dbm11",
    "dur": 720,
    "isRest": false,
    "next": 6240,
    "time": 5520,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 6720,
    "time": 6240,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
    ],
    "chordName": "Dbm",
    "dur": 160,
    "isRest": false,
    "next": 6880,
    "time": 6720,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
    ],
    "chordName": "Dbm",
    "dur": 80,
    "isRest": false,
    "next": 6960,
    "time": 6880,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
    ],
    "chordName": "Dbm",
    "dur": 720,
    "isRest": false,
    "next": 7680,
    "time": 6960,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 640,
    "time": 320,
  },
  Object {
    "chord": Array [
      49,
      53,
      56,
      58,
      61,
      65,
      68,
      70,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 960,
    "time": 640,
  },
  Object {
    "chord": Array [
      77,
      84,
      85,
      80,
    ],
    "chordName": "Fm6m",
    "dur": 480,
    "isRest": false,
    "next": 1280,
    "time": 960,
  },
  Object {
    "chord": Array [
      77,
      84,
      85,
      80,
    ],
    "chordName": "Fm6m",
    "dur": 480,
    "isRest": false,
    "next": 1600,
    "time": 1280,
  },
  Object {
    "chord": Array [
      77,
      84,
      85,
      80,
    ],
    "chordName": "Fm6m",
    "dur": 480,
    "isRest": false,
    "next": 1920,
    "time": 1600,
  },
  Object {
    "chord": Array [
      72,
      75,
      79,
    ],
    "chordName": "Cm6m",
    "dur": 480,
    "isRest": false,
    "next": 2400,
    "time": 1920,
  },
  Object {
    "chord": Array [
      72,
      75,
      79,
    ],
    "chordName": "Cm6m",
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2400,
  },
  Object {
    "chord": Array [
      70,
      74,
      75,
      79,
    ],
    "chordName": "Gm6m",
    "dur": 480,
    "isRest": false,
    "next": 3200,
    "time": 2880,
  },
  Object {
    "chord": Array [
      70,
      74,
      75,
      79,
    ],
    "chordName": "Gm6m",
    "dur": 480,
    "isRest": false,
    "next": 3520,
    "time": 3200,
  },
  Object {
    "chord": Array [
      70,
      74,
      75,
      79,
    ],
    "chordName": "Gm6m",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3520,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 4160,
    "time": 3840,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 4480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4480,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 5120,
    "time": 4800,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 5440,
    "time": 5120,
  },
  Object {
    "chord": Array [
      72,
      74,
      77,
      80,
    ],
    "chordName": "Fm6",
    "dur": 480,
    "isRest": false,
    "next": 5760,
    "time": 5440,
  },
  Object {
    "chord": Array [
      56,
      68,
      72,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 6080,
    "time": 5760,
  },
  Object {
    "chord": Array [
      56,
      68,
      72,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 6400,
    "time": 6080,
  },
  Object {
    "chord": Array [
      56,
      68,
      72,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6400,
  },
  Object {
    "chord": Array [
      79,
      87,
      82,
    ],
    "chordName": "Gm6m",
    "dur": 480,
    "isRest": false,
    "next": 7200,
    "time": 6720,
  },
  Object {
    "chord": Array [
      79,
      87,
      82,
    ],
    "chordName": "Gm6m",
    "dur": 480,
    "isRest": false,
    "next": 7680,
    "time": 7200,
  },
]
`;
